--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "haybox-webserial",
   "version": "0.0.1",
   "main": "index.ts",
-  "repository": "https://github.com/JonnyHaystack/haybox-webserial.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JonnyHaystack/haybox-webserial.git"
+  },
   "author": "Jonathan Haylett",
   "license": "LGPL-3.0-only",
   "private": false,
