--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,7 @@ jobs:
       
       - name: Checkout specific HayBox-proto revision
         run: |
+          cd proto
           git checkout ${{ env.PROTO_REVISION }}
       
       - name: Check some stuff
