--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "haybox-webserial",
-  "version": "0.0.1",
-  "main": "index.ts",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/JonnyHaystack/haybox-webserial.git"
-  },
-  "author": "Jonathan Haylett",
-  "license": "LGPL-3.0-only",
-  "private": false,
-  "dependencies": {
-    "@types/w3c-web-serial": "^1.0.6",
-    "buffer": "^6.0.3",
-    "protobufjs": "^7.2.6",
-    "ucobs": "^1.0.0"
-  },
-  "devDependencies": {
-    "protobufjs-cli": "^1.1.2"
-  }
+    "name": "haybox-webserial",
+    "description": "Implementation of HayBox firmware config protocol using Web Serial",
+    "version": "0.0.2",
+    "main": "index.ts",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/JonnyHaystack/haybox-webserial.git"
+    },
+    "author": "Jonathan Haylett",
+    "license": "LGPL-3.0-only",
+    "private": false,
+    "dependencies": {
+        "@types/w3c-web-serial": "^1.0.6",
+        "buffer": "^6.0.3",
+        "protobufjs": "^7.2.6",
+        "ucobs": "^1.0.0"
+    },
+    "devDependencies": {
+        "protobufjs-cli": "^1.1.2"
+    }
 }
