--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "files": [
         "dist"
     ],
+    "type": "module",
     "repository": {
         "type": "git",
         "url": "https://github.com/JonnyHaystack/haybox-webserial.git"
