--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "license": "LGPL-3.0-only",
     "private": false,
     "dependencies": {
+        "@bufbuild/protobuf": "^1.10.0",
         "@types/w3c-web-serial": "^1.0.6",
-        "buffer": "^6.0.3",
-        "protobufjs": "^7.2.6",
-        "ucobs": "^1.0.0"
+        "buffer": "^6.0.3"
     },
     "devDependencies": {
+        "@bufbuild/buf": "^1.34.0",
+        "@bufbuild/protoc-gen-es": "^1.10.0",
         "protobufjs-cli": "^1.1.2",
         "typescript": "^5.4.3"
     }
