chore: update Renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -6,12 +6,13 @@
   "customManagers": [
     {
       "customType": "regex",
-      "fileMatch": ["meta.yaml$"],
+        "fileMatch": ["^meta.yaml$"],
       "matchStrings": [
-        "revision:\\s+(?<currentValue>[^\\s]+)"
+        "revision:\\s+(?<currentDigestShort>[^\\s]+)"
       ],
+      "currentValueTemplate": "main",
       "depNameTemplate": "HayBox-proto",
-      "autoReplaceStringTemplate": "revision: {{{newValue}}}",
+      "autoReplaceStringTemplate": "revision: {{{newDigestShort}}}",
       "packageNameTemplate": "https://github.com/JonnyHaystack/HayBox-proto",
       "datasourceTemplate": "git-refs"
     }
